2001-06-26  Neil Jerram  <neil@ossau.uklinux.net>

	* eval.h, eval.c (scm_call_4): New function.

	* eval.c (SCM_APPLY, SCM_CEVAL, ENTER_APPLY): Call trap handlers
	directly rather than dispatching to them via scm_ithrow and a lazy
	catch.
	
	* eval.c (scm_evaluator_trap_table), eval.h (SCM_ENTER_FRAME_HDLR,
	SCM_APPLY_FRAME_HDLR, SCM_EXIT_FRAME_HDLR): Add three new options
	for trap handler procedures.

	* debug.h (SCM_RESET_DEBUG_MODE): Add checks for trap handler
	procedures not being #f.

2001-06-27  Michael Livshin  <mlivshin@bigfoot.com>

	* Makefile.am (c-tokenize.c): add rule to generate it.
	(EXTRA_DIST): add c-tokenize.lex, so it gets distributed.

	filter-doc-snarfage.c: remove.

2001-06-26  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* ports.c (scm_output_port_p): Use result of SCM_COERCE_OUTPORT.

	The following set of changes makes compiling Guile under various
	Windows compilers easier.  Compilation under GNU systems should
	not be affected at all.

	Thanks to Stefan Jahn for all necessary information, patches and
	testing.
	
	* posix.c: Conditialize getpwent, getgrent, kill, getppid, getuid,
	getpgrp, ttyname, primitive-fork and some header inclusion for
	Windows.

	* random.c: Define M_PI, if not predefined and use __int64 for
	LONG64 under Windows.

	* scmsigs.c: Emulate some functions (alarm, sleep, kill) under
	Windows and conditionalize some signal names.

	* socket.c (scm_getsockopt): Added missing comma.  
	Include socket library header under Windows.

	* stime.c (CLKTCK): Add cast to int, to make it compile under
	Windows.

	* ports.c (truncate): New function, compiled only under Windows.

	* net_db.c: Do not declare errno under Windows.

	* iselect.h, inet_aton.c: Include socket library headers under
	Windows.

	* guile.c (inner_main): Under Windows, initialize socket library
	and initialize gdb_interface data structures.

	* gdb_interface.h: Under Windows, gdb_interface cannot be